igvjs git issue 1369 - zoom-in notice visibility bug fix.

--- a/css/_dom-misc.scss
+++ b/css/_dom-misc.scss
@@ -4,13 +4,12 @@
   z-index: 1024;
 
   position: absolute;
-  top: 50%;
+  //top: 50%;
+  top: 8px;
   left: 50%;
 
-  //width: $igv-zoom-in-notice-width;
-  //height: $igv-zoom-in-notice-height;
-
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
+  //transform: translate(-50%, -50%);
 
   display: flex;
   flex-direction: row;
