--- a/css/dom.css
+++ b/css/dom.css
@@ -234,9 +234,9 @@
 .igv-zoom-in-notice-container {
   z-index: 1024;
   position: absolute;
-  top: 50%;
+  top: 8px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
